tests/typing/good/testfile-type_parameter-3.scala

class Test[E] { def add(x: E) : Unit = add(x) }
object Main { def main(args: Array[String]) { } }
