tests/typing/bad/testfile-plus3-1.scala
class A { def m() { var x: Int = - true } }
object Main { def main(args: Array[String]) { } }
